tests/spec/compile-fail/060_default_allocator_unavailable_freestanding.zn
// category: compile-fail
// profile: freestanding
// purpose: freestanding code without a default allocator must use In-suffix allocation APIs

module tests.fail.defaultAllocatorUnavailableFreestanding;

fn bad() -> Vector<U8> {
    return Vector<U8>.withCapacity(16); // expected-error: no profile default allocator is available; use withCapacityIn
}
